<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.TextUtils" />
        <variable
            name="book"
            type="com.promise09th.mvvmkotlin.presentation.model.Book" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/detail_fragment_normal_padding">

            <TextView
                android:id="@+id/datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_262626"
                android:textStyle="bold"
                app:bind_date="@{book.datetime}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thumbnail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_view_list_margin"
                android:padding="@dimen/item_view_list_margin"
                android:background="@drawable/count_background"
                app:layout_constraintTop_toBottomOf="@id/datetime"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="@dimen/image_view_height"
                    app:bind_image="@{book.thumbnail}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_view_list_margin"
                    android:text="@{book.title}"
                    android:textColor="@color/color_white"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toTopOf="@id/thumbnail"
                    app:layout_constraintBottom_toBottomOf="@id/thumbnail"
                    app:layout_constraintStart_toEndOf="@id/thumbnail"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contents_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/detail_contents_container_padding"
                android:paddingEnd="@dimen/detail_contents_container_padding"
                app:layout_constraintTop_toBottomOf="@id/thumbnail_container"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/contents_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_contents_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{!TextUtils.isEmpty(book.contents) ? book.contents : "N/A"}'
                    app:layout_constraintTop_toBottomOf="@+id/contents_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/url_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_url_title"
                    app:layout_constraintTop_toBottomOf="@id/contents"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{!TextUtils.isEmpty(book.url) ? book.url : "N/A"}'
                    android:autoLink="web"
                    app:layout_constraintTop_toBottomOf="@+id/url_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/isbn_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_isbn_title"
                    app:layout_constraintTop_toBottomOf="@id/url"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/isbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{!TextUtils.isEmpty(book.isbn) ? book.isbn : "N/A"}'
                    app:layout_constraintTop_toBottomOf="@+id/isbn_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/authors_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_authors_title"
                    app:layout_constraintTop_toBottomOf="@+id/isbn"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bind_authors="@{book.authors}"
                    app:layout_constraintTop_toBottomOf="@+id/authors_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/publisher_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_publisher_title"
                    app:layout_constraintTop_toBottomOf="@+id/authors"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{!TextUtils.isEmpty(book.publisher) ? book.publisher : "N/A"}'
                    app:layout_constraintTop_toBottomOf="@+id/publisher_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/translators_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_translators_title"
                    app:layout_constraintTop_toBottomOf="@+id/publisher"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/translators"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bind_authors="@{book.translators}"
                    app:layout_constraintTop_toBottomOf="@+id/translators_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/price_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_price_title"
                    app:layout_constraintTop_toBottomOf="@+id/translators"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/detail_price_format, book.price)}"
                    app:layout_constraintTop_toBottomOf="@+id/price_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/sale_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/detail_sale_price_format, book.sale_price)}"
                    app:layout_constraintTop_toBottomOf="@+id/price"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/status_title"
                    style="@style/DetailTitle"
                    android:text="@string/detail_status_title"
                    app:layout_constraintTop_toBottomOf="@+id/sale_price"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{!TextUtils.isEmpty(book.status) ? book.status : "N/A"}'
                    app:layout_constraintTop_toBottomOf="@+id/status_title"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
